src/test/deca/context/valid/Objet/Or-Field.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      nothing
//
// History:
//      created on 19/1/2022

class A {
    boolean x;
}

class B {
    boolean x;
}

{
    A a = new A();
    B b = new B();
    boolean y = a.x || b.x;
}